Fixed paragraph word overflow issue

--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -17,6 +17,7 @@ main .phase2 .website {
   font-size: 15px;
   text-align: left;
   margin: 0 1rem;
+  word-wrap: break-word;
 }
 main .image {
   width: 100px;
